--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is me abhishek , ishita</h1>
+    <h1>this is me abhishek , ishita , kridha</h1>
 </body>
 </html>
