--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>this is me abhishek , ishita</h1>
-    <p>code from abhishek branch</p>
+    <p>this changes is done from main</p>
 </body>
 </html>
