first line modified by abhishek branch

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is me abhishek , ishita</h1>
+    <h1>first line modified by abhishek</h1>
     <p>this changes is done from main</p>
     <p>another code entered from main</p>
 </body>
